--- a/pages/form/index.wxss
+++ b/pages/form/index.wxss
@@ -13,6 +13,10 @@
   color: #999999;
   font-size: 32rpx;
 }
+.subject{
+  font-size:20rpx;
+  color:black;
+}
 .weui-cells_after-title {
   margin-top: 0;
 }
