--- a/pages/form/form.wxml
+++ b/pages/form/form.wxml
@@ -1,4 +1,4 @@
-<view class="page-body">
+<view class="form-container">
   <view class="page-section">
     <view class="weui-cells__title">Email 
       <view class="subject">请填写您希望我们联系您的邮箱地址</view>
@@ -27,5 +27,5 @@
   </view>
   <view wx:if="{{result}}">{{result}}</view>
   <view wx:if="{{error}}" class="error">{{error}}</view>
-  <button type="primary" class="submit-button" bindtap="submitCase"> Submit </button>
+  <button type="primary" style="width:100%" class="submit-button" bindtap="submitCase"> Submit </button>
 </view>
